Logo, Home Page, Side Menu Add

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,10 @@
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-default navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a href="#" class="navbar-brand">CRE ToolBox</a>
+      <span class="brandName">
+        <a href="/home" class="flex-item">
+          <img src="/assets/Logo.png" alt="Snap Real Estate logo" class="logo-img">
+        </a>Snap Realty</span>
     </div>
 
     <div class="collapse navbar-collapse">
