--- a/src/app/login/user/user-login/user-login-form/user-login-form.component.html
+++ b/src/app/login/user/user-login/user-login-form/user-login-form.component.html
@@ -1,49 +1,55 @@
-<div id="frmContainer" class="col-lg-5 col-md-6 col-sm-6 col-xs-12">
+<div id="frmContainer" class="col-lg-9 col-md-8 col-sm-11 col-xs-12 login-form">
   <div class="row">
     <h3>Account Login</h3>
-    <hr />
+    <div>
+      <hr class="hr-sep">
+    </div>
   </div>
   <div class="row">
     <form (ngSubmit)="onSubmit(f)" #f="ngForm">
     <div class="row">
       <div class="form-group innerFormText">
-      <label>Email Address</label>
-      <input for="email"
-            type="email"
-            id="email"
-            class="form-control"
-            name="email"
-            placeholder="Email Address"
-            tabindex="1"
-            ngModel
-            required
-            pattern = "^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$">
+        <div class="col-lg-10 col-md-9 col-sm-11 col-xs-12 col-lg-offset-1 col-md-offset-1">
+        <label>Email Address</label>
+        <input for="email"
+              type="email"
+              id="email"
+              class="form-control"
+              name="email"
+              placeholder="Email Address"
+              tabindex="1"
+              ngModel
+              required
+              pattern = "^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$">
+        </div>
       </div>
     </div>
     <div class="row">
       <div class="form-group innerFormText">
-        <label>Password</label>
-        <input for="password" type="password" id="password"
-        class="form-control"
-        name="password"
-        placeholder="Password"
-        ngModel
-        required
-        tabindex="2">
+        <div class="col-lg-10 col-md-9 col-sm-11 col-xs-12 col-lg-offset-1 col-md-offset-1">
+          <label>Password</label>
+          <input for="password" type="password" id="password"
+          class="form-control"
+          name="password"
+          placeholder="Password"
+          ngModel
+          required
+          tabindex="2">
+        </div>
       </div>
     </div>
     <div class="row">
-      <div class="form-group">
-        <input type="submit" class="btn btn-primary btn-lg btn-block" value="Log In" id="form-submit" tabindex="4">
+      <div class="col-lg-10 col-md-9 col-sm-11 col-xs-12 col-lg-offset-1 col-md-offset-1">
+        <div class="form-group" >
+          <input type="submit" class="btn btn-primary btn-lg btn-block loginBtn" value="Log In" id="form-submit" tabindex="4">
+        </div>
       </div>
     </div>
     <div class="row">
       <div class="form-group displayInline innerFormText">
-        <div class="col-md-6">
-      <a href="#" id="forgotPasswordUrl" class="innerFormText">Forgot password?</a>
-      </div>
-        <div class="col-md-6">
-        <div class="keepSignedIn checkbox-inline">
+        <div class="col-lg-10 col-md-9 col-sm-11 col-xs-12 col-lg-offset-1 col-md-offset-1">
+          <a href="#" id="forgotPasswordUrl" class="innerFormText">Forgot password?</a>
+          <div class="keepSignedIn">
           <label for="rememberMe">
           <input id="rememberMe"
           name="rememberMe"
@@ -53,20 +59,18 @@
           ngModel> Keep me signed in
           </label>
         </div>
-      </div>
+        </div>
       </div>
     </div>
     <div class="row">
-      <hr /> or <hr />
+      <div>
+        <hr class="hr-sep">
+      </div>
     </div>
-      <a class="btn btn-block btn-social btn-facebook">
-        <span class="fa fa-facebook"></span>
-        Sign in with Facebook
-      </a>
-      <a class="btn btn-block btn-social btn-google">
-        <span class="fa fa-google"></span>
-        Sign in with Google
-      </a>
+      <div class="social-buttons">
+        <a href="#" class="btn btn-fb"><i class="fa fa-facebook"></i> Facebook</a>
+        <a href="#" class="btn btn-google"><i class="fa fa-google"></i> Google</a>
+      </div>
     </form>
   </div>
 </div>
