--- a/src/app/login/agent/agent-login/agent-login-form/agent-login-form.component.css
+++ b/src/app/login/agent/agent-login/agent-login-form/agent-login-form.component.css
@@ -1,3 +1,7 @@
+.hr-sep {
+  margin-left: 35px;
+  margin-right: 35px;
+}
 .innerFormText{
   text-align: left;
 }
@@ -10,3 +14,46 @@
 .displayInline {
   display: inline;
 }
+
+.login-form {
+  box-sizing: border-box;
+  border: 1px solid transparent;
+  border-radius: 4px;
+  box-shadow: 0 1px 1px rgba(0,0,0,0.05);
+  background-color: #fff;
+  border-color: #dbdbdb;
+  margin-bottom: 10px;
+  margin: 5px;
+}
+
+.loginBtn {
+  margin: 10px;
+  margin-left: 0px;
+}
+
+.form-group{
+  margin: 2px;
+}
+
+div {
+  display: block;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+*:before, *:after {
+  box-sizing: border-box;
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.social-buttons {
+  margin: 12px 0;
+}
+
