--- a/src/app/login/agent/agent-login/agent-login.component.html
+++ b/src/app/login/agent/agent-login/agent-login.component.html
@@ -1,7 +1,13 @@
 <div class="container container-table">
   <div class="row vertical-center-row">
-    <div class="text-center col-md-12 col-md-offset-4">
-      <app-agent-login-form></app-agent-login-form>
+    <div class="text-center col-lg-9 col-md-10">
+      <div class="row title">
+        <h1>Log in to Snap Realty</h1>
+      </div>
+      <div class="text-center col-lg-12 col-md-11 col-md-offset-3 col-lg-offset-3">
+        <br />
+        <app-agent-login-form></app-agent-login-form>
+      </div>
     </div>
   </div>
 </div>
