--- a/src/app/login/user/user-login/user-login.component.css
+++ b/src/app/login/user/user-login/user-login.component.css
@@ -3,6 +3,18 @@
 }
 
 .vertical-center-row {
-  display: table-cell;
+  display: grid;
   vertical-align: middle;
+}
+
+.signUp {
+  display: inline-block;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.title {
+  padding-left: 200px;
 }
