--- a/src/app/login/user/user-login/user-login.component.html
+++ b/src/app/login/user/user-login/user-login.component.html
@@ -1,7 +1,17 @@
 <div class="container container-table">
-  <div class="row vertical-center-row">
-    <div class="text-center col-md-12 col-md-offset-4">
-      <app-user-login-form></app-user-login-form>
+    <div class="row vertical-center-row">
+      <div class="text-center col-lg-9 col-md-10">
+        <div class="row title">
+          <h1>Log in to Snap Realty</h1>
+        </div>
+        <div class="row title">
+          <span>Need an Account?</span>
+          <a href="/signUp" id="signUp">Sign Up</a>
+        </div>
+        <div class="text-center col-lg-12 col-md-11 col-md-offset-3 col-lg-offset-3">
+          <br />
+          <app-user-login-form></app-user-login-form>
+        </div>
+      </div>
     </div>
-  </div>
 </div>
